<resources>
    <string name="app_name" translatable="false">Don\'t Die Please</string>

    <!-- Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="home" translatable="false">Home</string>
    <string name="statistics">Statistics</string>
    <string name="calendar">Calendar</string>
    <string name="notifications">Notifications</string>

    <!-- Dialog -->
    <string name="note">Notes</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="dialog_report_title">Insert a new report</string>
    <string name="dialog_report_title_edit">Edit report</string>
    <string name="value">Value</string>
    <string name="invalid_category">Reports may not have the same category more than once</string>
    <string name="invalid_double_value">Values may be decimal rational numbers</string>

    <!-- Home -->
    <string name="contains">Contains</string>
    <string name="search">Search</string>
    <string name="no_category">No category selected</string>

    <!-- Categories -->
    <string name="heart">Heartbeats per minute</string>
    <string name="temperature">Body temperature</string>
    <string name="systolic">Systolic pressure</string>
    <string name="diastolic">Diastolic pressure</string>

    <!-- Summary -->
    <string name="average">Average values:</string>
    <string name="reports">Reports:</string>

    <!-- Notifications -->
    <string name="toggle_notifications">Toggle notifications</string>
    <string name="selected_time">Selected time</string>
    <string name="not_selected">Not selected</string>
    <string name="choose">Choose</string>
    <string name="notification_title">Update your reports</string>
    <string name="notification_content">Add a health report, if you don\'t want to die.</string>
    <string name="postpone">Postpone</string>
    <string name="channel_description">Used for health reminders and warnings</string>
    <string name="monitors">Monitors</string>
    <string name="start_date">From:</string>
    <string name="to">To:</string>
    <string name="threshold">Threshold</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="warning_title">Health warning</string>
    <string name="warning_content">Your %s exceeded the value of %.2f</string>

    <!-- Statistics -->
    <string name="heart_weekly">This week\'s heartbeat</string>
    <string name="safe">Safe</string>
    <string name="warning">Warning</string>
</resources>
