<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/padding_small" >

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/toggle_notifications"
            android:text="@string/toggle_notifications" />

        <Switch
            android:id="@+id/toggle_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"/>

    </LinearLayout>

    <TextView
        android:id="@+id/selected_time_view"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_time"
        android:layout_below="@id/linear_layout" />

    <TextView
        android:id="@+id/selected_time"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:text="@string/not_selected"
        android:layout_toEndOf="@id/selected_time_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/time_button"
        android:layout_below="@+id/selected_time"
        android:layout_alignStart="@+id/selected_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose" />

</RelativeLayout>