<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small">
    <!-- Filters -->
    <androidx.cardview.widget.CardView
        android:id="@+id/search_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="@dimen/padding_extrasmall" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/contains_view"
                android:text="@string/contains"
                android:labelFor="@id/category_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"/>
            <Spinner
                android:layout_toEndOf="@id/contains_view"
                android:id="@+id/category_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"/>

            <TextView
                android:id="@+id/from_view"
                android:labelFor="@+id/from_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:layout_alignBottom="@+id/from_edit"
                android:layout_marginEnd="@dimen/margin_small"/>
            <EditText
                android:id="@+id/from_edit"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/category_spinner"
                android:layout_toEndOf="@+id/from_view"
                android:hint="@string/value"
                android:layout_marginEnd="@dimen/margin_small" />

            <TextView
                android:id="@+id/to_view"
                android:labelFor="@+id/from_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_alignBottom="@+id/to_edit"
                android:layout_toEndOf="@+id/from_edit"
                android:layout_marginEnd="@dimen/margin_small"/>
            <EditText
                android:id="@+id/to_edit"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/category_spinner"
                android:layout_toEndOf="@+id/to_view"
                android:hint="@string/value" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/search"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/to_edit"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/fragment_home_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_card"
        android:layout_alignParentBottom="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:src="@drawable/ic_add_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>